--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lup-caches",
   "version": "1.0.1",
-  "description": "Offers efficient caches",
+  "description": "Offers different types of caches with limited size or limited entry count",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
@@ -19,7 +19,7 @@
     "lru-cache",
     "caches",
     "fixed-size",
-	  "lup-caches"
+	"lup-caches"
   ],
   "author": "LupCode.com",
   "license": "MIT",
